* Option not to bold queue tab (thanks garg)
* Option not to send unknown /-commands (thanks garg)
* Hopefully fixed some encoding issues with the xml filelist
* Hashing is now mandatory (stop whining, it was only meant to be optional in 0.307)
* Match files now works correctly with TTH's in queue
* Hub name more or less correct on TTH results in search frame

 -- 0.307 2004-03-10 --
* Experimental release, lots and lots of core code has changed => high fatal bug probability.
* Fixed full name being displayed in user commands with submenus
* Bloom filters dramatically improve cpu efficiency on incoming searches (if you have a large share)
* Auto match results shown in status bar
* Added option to match autosearch filenames exactly to further avoid the wrong file being downloaded (default on)
* End of zlib transfer test period, semantics slightly changed ($GetTestZBlock -> $GetZBlock, $Sending changed)
* Speed increase when loading shares with many files of the same size (thanks farcry)
* Added file hashing, turn it off in advanced settings (experimental)
* Merkle trees and tiger hashing added for TTH hash support
* Compression totally rewritten, should also fix a few minor issues
* Compression (GetZBlock) and hashing (TTHSearch) is advertised to hubs through $Supports, I advise hubs to advise 
  its users to keep at least hashes on so that searching by hashes will work efficiently (as it's only useful if 
  all clients on the hub support it).
* Fixed bug where no/invalid file listing would be written if there was no disk space (the old one is used now 
  instead...)
* XML File lists that contain hashes if available, and support full utf-8 names (correct viewing is not guaranteed,
  but download should work)
* Upgraded to zlib 1.2.1 (thanks garg)
* Extra column for hub in transfer list (thanks torgny nyblom)
* Copy nick to clipboard in transfer list (thanks torgny nyblom)
* Files starting with a '.' are no longer shared if hidden files are not shared (...unix...)