@@ -251,6 +251,7 @@ string ResourceManager::strings[] = {
 "Rollback inconsistency, existing file does not match the one being downloaded", 
 "Running...", 
 "Search", 
+"Search by TTH", 
 "Search for", 
 "Search for alternates", 
 "Search for file", 
@@ -674,6 +675,7 @@ string ResourceManager::names[] = {
 "RollbackInconsistency", 
 "Running", 
 "Search", 
+"SearchByTth", 
 "SearchFor", 
 "SearchForAlternates", 
 "SearchForFile", 
